--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@
 }
 
 body {
+    
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
@@ -35,9 +36,10 @@ body {
         color-stop(0, #A7A7A7),
         color-stop(0.51, #E4E4E4)
     );
-    background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:12px;
+   background-attachment:fixed;
+    font-family: "Courier";
+    font-size: 34px;
+    font-style: italic;
     height:100%;
     margin:0px;
     padding:0px;
@@ -54,6 +56,21 @@ ul {
 
 li {
     float: left;
+}
+wh {
+    color: white;
+}
+
+smalltxt {
+    font-size: 18px;
+}
+
+blk {
+    color: black;
+}
+
+purp {
+    color: #1F1224;
 }
 
 li a {
@@ -82,49 +99,86 @@ li b:hover {
 }
 
 .category_toiletries {
-     background-color: blue;
+    background-color: #9405CA;
      width:100%;
      padding-top: 50px;
+     padding-bottom: 50px;
      transition:0.5s;
 }
 
 .category_clothes {
-     background-color: pink;
+    background-color: #C229FC;
      width:100%;
      padding-top: 50px;
+     padding-bottom: 50px;
      transition:0.5s;
 }
 
 .category_tech {
-     background-color: orange;
+    background-color: #D363FC;
      width:100%;
      padding-top: 50px;
+     padding-bottom: 50px;
      transition:0.5s;
 }
 
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+.category_flight {
+    background-color: #D874FD;
+    width:100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    transition:0.5s;
 }
 
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
+.category_entertainment {
+    background-color: #E5A3FE;
+    width:100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    transition:0.5s;
 }
+
+.category_DIY {
+    background-color: #EDBEFF;
+    width:100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    transition:0.5s;
+}
+
+.Home {
+    background-color: #EDBEFF;
+    width: 100%;
+    height: 100%;
+    padding-top: 100%;
+    padding-bottom: 100%;
+    transition:0.5s;
+}
+
+img.resize_two {
+    width:65%;
+    height: 65%
+}
+
+img.resize {
+    width:25%; /* you can use % */
+    height: 25%;
+}
+
+.hello {
+    padding-top: 150px;
+
+    width: 30%;
+    height: 30%;
+    margin: auto;
+    display: block;
+}
+
+/* Portrait layout (default) */
+
+
+/* Landscape layout (with min-width) */
+
 
 h1 {
     font-size:24px;
